Bug 1644212 - reintroduce an attribute to limit which windows allow full screen, r=xidorn,haik

Differential Revision: https://phabricator.services.mozilla.com/D79109